--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,12 +63,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //fing-sdk
+    implementation project(path :":fing", configuration : 'default')
     implementation 'org.snmp4j:snmp4j:3.6.7'
     implementation 'com.google.protobuf:protobuf-java:2.6.1'
     implementation 'com.google.android.gms:play-services-analytics:18.0.1'
-    implementation(name:'fing-kit', ext:'aar') {
-        transitive=true
-    }
 
     // Dagger 2
     implementation "com.google.dagger:dagger:$dagger_version"
