--- a/settings.gradle
+++ b/settings.gradle
@@ -10,11 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        flatDir {
-            dirs 'app/libs'
-        }
+//        flatDir {
+//            dirs 'app/libs'
+//        }
     }
 }
 rootProject.name = "boltHome"
 include ':app'
-include ':fing'
