HP-1355 changes with Latest fing gradle dependancy and removal of old .aar file

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,11 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        flatDir {
-            dirs 'app/libs'
-        }
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "boltHome"
 include ':app'
-include ':fing'
