--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,6 @@ dependencies {
     //Json Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //fing-sdk
-    implementation project(path :":fing", configuration : 'default')
     implementation 'org.snmp4j:snmp4j:3.6.7'
     implementation 'com.google.protobuf:protobuf-java:2.6.1'
     implementation 'com.google.android.gms:play-services-analytics:18.0.1'
@@ -84,4 +82,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation(group: 'com.github.fingltd', name: 'devrecog', version:'2.5.2', ext: 'aar')
 }
