--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,5 +83,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation(group: 'com.github.fingltd', name: 'devrecog', version:'2.5.2', ext: 'aar')
+    implementation(group: 'com.github.fingltd', name: 'devrecog', version:'2.5.2', ext: 'all')
 }
