--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.library'
-    //id 'com.android.application'
+//    id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
@@ -9,8 +9,8 @@ android {
     compileSdk 31
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
-       // applicationId "com.bolttech.bolthome"
-        minSdk 21
+//        applicationId "com.bolttech.bolthome"
+        minSdk 22
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -83,5 +83,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation(group: 'com.github.fingltd', name: 'devrecog', version:'2.5.2', ext: 'all')
+    implementation(group: 'com.github.fingltd', name: 'devrecog', version:'2.5.2', ext: 'aar')
+    implementation(group: 'androidx.appcompat', name: 'appcompat', version:'1.1.0')
+    implementation(group: 'androidx.coordinatorlayout', name: 'coordinatorlayout', version:'1.1.0')
+    implementation(group: 'com.google.android.material', name: 'material', version:'1.1.0')
+    implementation(group: 'com.google.android.gms', name: 'play-services-analytics', version:'17.0.0')
+    implementation(group: 'com.google.protobuf', name: 'protobuf-java', version:'2.6.1')
+    implementation(group: 'com.squareup.okhttp3', name: 'okhttp', version:'4.8.0')
+    implementation(group: 'org.snmp4j', name: 'snmp4j', version:'2.5.0')
 }
